trying to fix overflow

--- a/public/stylesheets/custom-bootstrap.css
+++ b/public/stylesheets/custom-bootstrap.css
@@ -47,7 +47,7 @@ body {
 }
 
 .location-item {
-    /*overflow: hidden;*/
+    overflow: hidden;
     position: relative;
     height: 100px;
     transition: all .25s ease;
